--- a/src/style.css
+++ b/src/style.css
@@ -1,49 +1,49 @@
 body {
   background-color: linear-gradient(#36f7ba, #7dea6f);
-font-family: Arial, Helvetica, sans-serif;}
-a{
+  font-family: Arial, Helvetica, sans-serif;
+}
+a {
   color: #2bf1d3;
 }
-.container{
-  margin: 120px 0;
+.container {
+  margin: 120px auto;
   max-width: 600px;
 }
-header{
+header {
   margin-bottom: 30px;
-  
 }
-h1{
+h1 {
   text-align: center;
   font-weight: 700;
   line-height: 1.5;
   font-size: 38px;
   color: rgb(228, 116, 78);
 }
-form{
+form {
   padding: 30px;
   background-color: white;
   border-radius: 18px;
   display: flex;
 }
-.instructions{
+.instructions {
   padding: 10px;
   border: 1px solid rgba(44, 66, 12, 10);
-width: 80%;
-font-size: 14px;
-border-radius: 50px;
-line-height: 22px;
-color: #273d3c;
+  width: 80%;
+  font-size: 14px;
+  border-radius: 50px;
+  line-height: 22px;
+  color: #273d3c;
 }
-.submit-btn{
+.submit-btn {
   margin-left: 10px;
   background: #2bf1d3;
   color: aliceblue;
   border: none;
   width: 150px;
-  border-radius: 50px ;
-padding: 16px 22px;
+  border-radius: 50px;
+  padding: 16px 22px;
 }
-.poem{
+.poem {
   font-size: 18px;
   background-color: blanchedalmond;
   padding: 20px;
@@ -51,6 +51,8 @@ padding: 16px 22px;
   border-left: 3px solid #36f7ba;
   box-shadow: 0px 4px 20px 0px rgba(33, 11, 77, 00);
 }
-footer{text-align: center;
-font-size: 14px;
-margin-top: 30px;}
+footer {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 30px;
+}
