--- a/src/style.css
+++ b/src/style.css
@@ -19,11 +19,21 @@ h1 {
   font-size: 38px;
   color: rgb(228, 116, 78);
 }
-form {
-  padding: 30px;
+.form-container {
   background-color: white;
+  padding: 15px 20px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 77, 0.04);
   border-radius: 18px;
+  margin-bottom: 30px;
+}
+form {
   display: flex;
+}
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  font-size: 12px;
+  opacity: 0.8;
 }
 .instructions {
   padding: 10px;
@@ -37,7 +47,7 @@ form {
 .submit-btn {
   margin-left: 10px;
   background: #2bf1d3;
-  color: aliceblue;
+  color: rgb(68, 92, 113);
   border: none;
   width: 150px;
   border-radius: 50px;
@@ -45,17 +55,37 @@ form {
 }
 .poem {
   font-size: 18px;
-  background-color: blanchedalmond;
+  background-color: rgb(85, 58, 17);
+  display: none;
   padding: 20px;
   line-height: 24px;
   border-left: 3px solid #36f7ba;
   box-shadow: 0px 4px 20px 0px rgba(33, 11, 77, 00);
+}
+.hidden {
+  display: none;
+}
+poem strong {
+  color: #895df3;
 }
 footer {
   text-align: center;
   font-size: 14px;
   margin-top: 30px;
 }
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
 .poem strong {
   color: rgba(70, 70, 33, 0.333);
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
